<resources>
    <string name="app_name">Social Location</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_logout">Log Out</string>
    <string name="title_activity_maps">Map</string>

    <!-- Permissions -->
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
...
    <string name="signup_error_title">Error!</string>

    <!-- String related to user-->
    <string name="confirm_password_missing">Please confirm password</string>
    <string name="password_match_error">Passwords don\'t match</string>
    <string name="tv_username">Username</string>
    <string name="title_activity_friend_list">Friends</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_add_friends">Add Friends</string>
    <string name="title_activity_friend_requests">Friend Requests</string>
</resources>

